ACLOCAL_AMFLAGS = -I m4

AUTOMAKE_OPTIONS = 1.6

SUBDIRS = . lib demos doc tests

#dist_noinst_DATA = GPL.html

#dist_noinst_DATA += docs/iconspecs.htm

#docsdir = $(pkgdatadir)/docs

#dist_docs_DATA = docs/fzdefaults.xml.example

#dist_man1_MANS = docs/filezilla.man \
#		 docs/fzputtygen.man \
#		 docs/fzsftp.man
#dist_man5_MANS = docs/fzdefaults.xml.man
